--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@dfds-ui/modal": "^0.8.5",
-    "@dfds-ui/react-components": "^0.8.5",
+    "@dfds-ui/react-components": "^0.8.28",
+    "@dfds-ui/theme": "^0.8.28",
+    "@emotion/babel-preset-css-prop": "^10.0.27",
+    "@emotion/core": "^10.0.35",
+    "@emotion/css": "^10.0.27",
+    "@emotion/styled-base": "^10.0.31",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
+    "gatsby-plugin-emotion": "^4.3.13",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-offline": "^3.2.9",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sharp": "^2.6.11",
     "gatsby-source-filesystem": "^2.3.11",
     "gatsby-transformer-sharp": "^2.5.5",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dates": "^21.8.0",
+    "react-dates": ">= 20.0.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-select": "^3.1.0"
