--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dates": ">= 20.0.0",
+    "react-dates": "21.8.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-select": "^3.1.0"
